force-app/main/default/objects/SCMImpToolsSO_Stage__c/SCMImpToolsSO_Stage__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>SO Stage</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SO Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>