force-app/main/default/objects/SCMImpToolsSO_Stage__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer PO Number</inlineHelpText>
    <label>Customer PO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>