force-app/main/default/objects/SCMImpToolsSO_Stage__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, there is an error associated with the PO</inlineHelpText>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>