force-app/main/default/objects/SCMImpToolsSO_Stage__c/fields/Loaded__c.field-meta.xml
<CustomField>
    <fullName>Loaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the SO and its line items have been loaded</inlineHelpText>
    <label>Loaded</label>
    <type>Checkbox</type>
</CustomField>