force-app/main/default/objects/SCMImpToolsSO_Stage__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>Quantity of item being sold</inlineHelpText>
    <label>Quantity</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>