force-app/main/default/objects/SCMImpToolsSO_Stage__c/fields/SO_Date__c.field-meta.xml
<CustomField>
    <fullName>SO_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date of the original SO</inlineHelpText>
    <label>SO Date</label>
    <type>Date</type>
</CustomField>