force-app/main/default/objects/SCMImpToolsSO_Stage__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <inlineHelpText>Unit price of the item being sold</inlineHelpText>
    <label>Unit Price</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>