force-app/main/default/objects/SCMImpToolsSO_Stage__c/listViews/All_Loaded.listView-meta.xml
<ListView>
    <fullName>All_Loaded</fullName>
    <columns>NAME</columns>
    <columns>Loaded__c</columns>
    <columns>Customer__c</columns>
    <columns>Customer_PO__c</columns>
    <columns>Existing_SO_Number__c</columns>
    <columns>SO_Date__c</columns>
    <columns>Currency__c</columns>
    <columns>Item__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Error__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loaded__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Loaded</label>
</ListView>